Add format to WAR and use TEXFORMATS environment variable to point TeX to it.